# gala_demo_pkg

./: .gitignore  BUILD.bazel  README.md  gala.mod  go.mod  math.gala  utils.gala
